syntax = "proto3";

package io.stellarproject.pxe.v1;

import weak "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/stellarproject/terraos/api/pxe/v1;v1";

service PXE {
	rpc Install(InstallRequest) returns (google.protobuf.Empty);
	rpc List(google.protobuf.Empty) returns (ListResponse);
	rpc Register(RegisterRequest) returns (google.protobuf.Empty);
	rpc Remove(RemoveRequest) returns (google.protobuf.Empty);
}

message InstallRequest {
	Bootloader loader = 1;
	bool default = 2;
}

message ListResponse {
	repeated Bootloader bootloaders = 1;
}

message RegisterRequest {
	string mac = 1;
	string ip = 2;
	string root = 3;
	string boot = 4;
	ISCSI iscsi = 5;
	repeated string options = 6;
	Bootloader loader = 7;
}

message RemoveRequest {
	string mac = 1;
}

message Bootloader {
	string id = 1 [(gogoproto.customname) = "ID"];
	string kernel_version = 2;
	string image = 3;
}

message ISCSI {
	string initiator_iqn = 1;
	string target_iqn = 2;
	string target_ip = 3;
}
